# LangChain-in-Kubernetes

./: .gitignore  Dockerfile  README.md  deployment.yaml  ec2-user.code-workspace  efs_storage.yaml  eksctl-cluster.yaml  example.yaml  frontend.txt  ingest.py  ingress.yaml  model.py  ngnix.yaml  requirements.txt  setupProxy.js
.github/: dependabot.yml
.github/workflows/: bandit.yml  codeql.yml
1__Front_End/: package-lock.json
1__Front_End/src/chatbot/: ActionProvider.js
2__Models_FE/: requirements.txt  server.py
3__External_Models/OpenAI/: requirements.txt
3__External_Models/OpenAI/app/: server.py
3__External_Models/app/: server.py
3__Local_Models/: .gitignore
3__Local_Models/FALCON-non/: Dockerfile  requirements.txt
3__Local_Models/LLAMA-OPT/: Dockerfile  pyproject.toml  requirements.txt
3__Local_Models/LLAMA-OPT/app/: llama2.py  server.py
3__Local_Models/LLAMA-cpp/: requirements.txt
3__Local_Models/LLAMA-non/: README.md  requirements.txt  test.ipynb
Model/: model.py  requirements.txt
chat backend Optimized/: Dockerfile  requirements.txt
chat-api/: test.py
chat-api/app/: server.py  test.ipynb
chat-backend/: Dockerfile  deployment copy.yaml  deployment.yaml  requirements.txt
chat-backend/src/: main.py
chat-local-llama/Test for cona/: Dockerfile  deployment.yaml  llama2.py
chat-local-llama/chat-local/: deployment.yaml  requirements.txt
chats_front/: dockerfile  requirements.txt
chats_front/app/: middleware.py  server.py
front_end/: Dockerfile  front-end-service.yaml  package-lock.json  package.json
front_end/src/: App.css
(+19 files in other folders)
