[tool.poetry]
name = "chat-local"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
transformers = "^4.29.0"
langchain = "==0.0.229"
pypdf = "*"
faiss-cpu = "*"
chainlit = "==0.7.700"
fastapi = "*"
pydantic = "<2.0"
uvicorn = "*"
flask-cors = "*"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
